--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 TP1-TP2/write_noncanonical
 TP1-TP2/read_noncanonical
 .vscode
-Trabalho Prático 2/clientTCP
-Trabalho Prático 2/getip
+Trabalho Prático 2/download
+Trabalho Prático 2/timestamp.txt
