Changes in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ TP1-TP2/write_noncanonical
 TP1-TP2/read_noncanonical
 .vscode
 Trabalho Prático 2/download
-Trabalho Prático 2/timestamp.txt
+Trabalho Prático 2/file-received.txt
